[tool.poetry]
name = "TGI What'sApp Chat Analyzer"
version = "0.1"
description = ""
authors = [
    "Yoaquim Cintrón"
]

[tool.pdm]

[tool.pdm.scripts]
start = "python -m streamlit run main.py"

[project]
name = "TGI What'sApp Chat Analyzer"
version = "0.1"
description = ""
authors = [
    {name = "Yoaquim Cintrón", email = "yoaquim@outlook.com"},
]
dependencies = [
    "streamlit>=1.22.0",
    "altair>=4.2.2",
]
requires-python = ">=3.11"
license = {text = "MIT"}
